--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@
 ./logistics_sim/routing_optimizer
 ./logistics_sim/routing_optimizer.exe
 ./logistics_sim/log
+./logistics_sim/temp
 ./logistics_sim/__pycache__
 *.csv
